Transaction Test done, ItemTransaction on progress